--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "keywords": [],
   "author": "Lambda School",
   "dependencies": {
+    "3": "^2.1.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "knex": "^0.20.1",
     "knex-cleaner": "^1.3.0",
+    "sqlite": "^3.0.3",
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {
